--- a/about.html
+++ b/about.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <!--In this section I have done my embedded css styles so I have kept it simple by making the background color grey and scaling the images to page in a reasonable manner-->
         <style>
             body {
                 background-color: grey;
             }
 
             img {
-                height: 500px;
-                width: 400px;
+                height: 40%;
+                width: 30%;
             }
         </style>
         
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>More about me</title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <a style="font-size: 40px; color:lightgreen; text-decoration: none;" href="index.html">Main Page</a>
+        <!--In the two elements below I show the idea of inline css styles through changing the font size, the color of the font, removing the underline from the link, and changing the paragraph text to lightgreen-->
+        <a style="font-size: 300%; color:lightgreen; text-decoration: none;" href="index.html">Main Page</a>
         <h1>About me Continued</h1>
         <p style="color:lightgreen;">Some more things about me are that I used to play basketball, I used to do robotics, and I like to learn a little bit of japanese in my free time.</p>
+
         <img src="./basketball.jpg">
         <img src="./robot.jpg">
         <script src="" async defer></script>
