--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <img src="./sisterspc.jpg"/>
 
         <div id="infobackground">
-            <h4 id="designtext">Made by Jon Mateer :&#41</h4>
+            <h4 id="designtext">Made by Jon Mateer :&#41;</h4>
             <h4 id="versiontext">V1.0</h4>
         </div>
         
