--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-        <title>Jon Mateer's Portfolio</title>
+        <title>Jon's Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
@@ -15,28 +15,41 @@
         <!--Here is my navigational section with links contained in a nav tag-->
         <div id="navbackground">
             <nav>
-                <a id="about" class="headerprops ml25" href="./index.html">About</a>
+                <a id="home" class="headerprops ml25" href="./index.html">Home</a>
                 <a id="projects" class="headerprops" href="./projects.html">Projects</a>
                 <a id="blog" class="headerprops" href="./blog.html">Blog</a>
                 <a id="resume" class="headerprops" href="resume.html">Resume</a>
             </nav>
         </div>
 
+         <!--Where the Page Content will Go-->
+         <br>
+         <img id="firstimg" src="./mypc.jpg"/>
+         <img src="./sisterspc.jpg"/>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+         <br>
+    
+
         <div id="infobackground">
             <h4 id="designtext">Made by Jon Mateer :&#41</h4>
-            <h4 id="versiontext">V1.0</h4>
+            <h4 id="versiontext">V1.1</h4>
         </div>
         
-        <script> 
-            //Variables to assign the designtext and versiontext id's to use later to manipulate
-            let designcolor = document.getElementById("designtext");
-            let versioncolor = document.getElementById("versiontext");
-
-            //Use JS to change the css style of the design/version color variables to mint green color
-            designcolor.style.color = "#98fbcb";
-            versioncolor.style.color = "#98fbcb";
-        </script>
-
         <script src="" async defer></script>
     </body>
 </html>
