--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-        <title>Jon Mateer's Portfolio</title>
+        <title>Jon's Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
@@ -15,45 +15,48 @@
         <!--Here is my navigational section with links contained in a nav tag-->
         <div id="navbackground">
             <nav>
-                <a id="about" class="headerprops ml25" href="./index.html">About</a>
+                <a id="home" class="headerprops ml25" href="./index.html">Home</a>
                 <a id="projects" class="headerprops" href="./projects.html">Projects</a>
                 <a id="blog" class="headerprops" href="./blog.html">Blog</a>
                 <a id="resume" class="headerprops" href="resume.html">Resume</a>
             </nav>
         </div>
+        <h1 id="whoami" class="cmiddle">Jon@Mateer:~$ whoami</h1>
 
 
         <!--A brief paragraph of some things about me-->
-        <p id="intro">Hello my name is Jonathan Mateer, I'm originally from Carroll Country maryland.  I'm a Computer Science major here with cognates in software development and general CS.  I'm currently a Junior with an expected graduation year of 2026. Some interesting things about me I'd say are that I build computers for fun, and that I like to rock climb.  I'll try and put a picture or two of computers I've built below, and maybe if I can find one of the rockwall I'll put one of those below as well. Some more things about me are that I used to play basketball, I used to do robotics, and I like to learn a little bit of japanese in my free time.
+        <p id="intro">Hello my name is Jonathan Mateer(I go by Jon), I'm originally from Carroll Country Maryland.  I'm a Computer Science major here at Liberty University with cognates in software development and general CS.  I'm currently a Junior with an expected graduation year of 2026.  I have a lot of interests but I'll try and contain my excitement and just list a couple of them.  Some of my interests include: building computers for fun, learning further game and web development, japanese, rock climbing, and every once in a while a bit of sound design playing with synthesizers in Ableton.  
         </p>
 
-        <!--I didn't know how to make just a custom button so I used this as a reference https://www.w3schools.com/tags/tag_button.asp-->
-        <!--Here is where I do my alert event for this assignment-->
-        <button id="messagebutton" type="button" onclick="alert('Surprise!!!!!')">Click Me!</button>
-        <br>
-        <br>
+        <!--User form for individual assignment2-->
+        <form id="userform" class="cmiddle">
+            <label for="firstname">Please enter your first name:</label><br>
+            <input type="text" id="firstname" name="firstname" required><br>
+            <label for="lastname">Please enter your last name:</label><br>
+            <input type="text" id="lastname" name="lastname" required><br>
+            <label for="age">Please enter your age:</label><br>
+            <input type="number" id="age" name="age" required><br>
+            <label for="email">Please enter your email:</label><br>
+            <input type="email" id="email" name="email" required><br><br>
+            <!--event handler on the submit button to run JS upon being pressed-->
+            <input type="submit" id="submitform" onclick="event.preventDefault();"><br>
+        </form>
+        <h2 id="secretmessage" class="cmiddle"></h2>
         <br>
 
 
         <!--These are just some images of PCs I've built-->
-        <img id="firstimg" src="./mypc.jpg"/>
-        <img src="./sisterspc.jpg"/>
+        <img id="firstimg" src="./merockwall.jpg"/>
+        <img src="./meglasses.jpg"/>
+        <br>
+        <br>
 
         <div id="infobackground">
             <h4 id="designtext">Made by Jon Mateer :&#41;</h4>
-            <h4 id="versiontext">V1.0</h4>
+            <h4 id="versiontext">V1.1</h4>
         </div>
         
-        <script> 
-            //Variables to assign the designtext and versiontext id's to use later to manipulate
-            let designcolor = document.getElementById("designtext");
-            let versioncolor = document.getElementById("versiontext");
 
-            //Use JS to change the css style of the design/version color variables to mint green color
-            designcolor.style.color = "#98fbcb";
-            versioncolor.style.color = "#98fbcb";
-        </script>
-
-        <script src="" async defer></script>
+        <script src="proj2.js" async defer></script>
     </body>
 </html>
