--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
-        <title>Jon Mateer's Portfolio</title>
+        <title>Jon's Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="styles.css">
@@ -15,27 +15,51 @@
         <!--Here is my navigational section with links contained in a nav tag-->
         <div id="navbackground">
             <nav>
-                <a id="about" class="headerprops ml25" href="./index.html">About</a>
+                <a id="home" class="headerprops ml25" href="./index.html">Home</a>
                 <a id="projects" class="headerprops" href="./projects.html">Projects</a>
                 <a id="blog" class="headerprops" href="./blog.html">Blog</a>
                 <a id="resume" class="headerprops" href="resume.html">Resume</a>
             </nav>
         </div>
+        <div id="resumecontent">
+            <h1 class="cmiddle resumeinfo">Jonathan Mateer</h1>
+            <h3 class="cmiddle resumeinfo">Liberty University, Lynchburg VA 24515</h3>
+            <h3 class="cmiddle resumeinfo">jmateer@liberty.edu</h3>
+            <hr id="linebreak">
+            <h3 class="resumeinfo ml10">Education:</h3>
+            <h4 class="resumeinfo ml10">Liberty University; Lynchburg, VA</h4>
+            <h4 class="resumeinfo ml10">B.S. In Computer Science &#40Software Engineering and General Computer Science&#41</h4>
+            <ul class="listcontent">
+                <li>Participated in University's Competitive Programming Club(CPC) with Kattis ranking of 9300/100000</li>
+                <li>Attended Game Design and Development Club learning about game design principles, and development through Unreal Engine 5</li>
+            </ul>
+            <h3 class="resumeinfo ml10">Experience:</h3>
+            <h3 class="resumeinfo ml10">Skills:</h3>
+            <ul class="listcontent">
+                <li>Github</li>
+                <li>Experienced in Linux, MacOS, and Windows</li>
+                <li>Building custom computers</li>
+                <li>Troubleshooting computer hardware/software</li>
+                <li>Figma</li>
+                <li>Adobe Illustrator</li>
+                <li>Ableton Live 11</li>
+                <li>Office Suite</li>
+            </ul>
+            <h3 class="resumeinfo ml10">Programming Languages:</h3>
+            <ul class="listcontent">
+                <li>C++</li>
+                <li>Python</li>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JavaScript</li>
+                <li>6502, ARM, x64 Assembly</li>
+            </ul>
+        </div>
 
         <div id="infobackground">
             <h4 id="designtext">Made by Jon Mateer :&#41</h4>
-            <h4 id="versiontext">V1.0</h4>
+            <h4 id="versiontext">V1.1</h4>
         </div>
-        
-        <script> 
-            //Variables to assign the designtext and versiontext id's to use later to manipulate
-            let designcolor = document.getElementById("designtext");
-            let versioncolor = document.getElementById("versiontext");
-
-            //Use JS to change the css style of the design/version color variables to mint green color
-            designcolor.style.color = "#98fbcb";
-            versioncolor.style.color = "#98fbcb";
-        </script>
 
         <script src="" async defer></script>
     </body>
