--- a/blog.html
+++ b/blog.html
@@ -15,10 +15,10 @@
         <!--Here is my navigational section with links contained in a nav tag-->
         <div id="navbackground">
             <nav>
-                <a id="home" class="headerprops ml25" href="./index.html">Home</a>
-                <a id="projects" class="headerprops" href="./projects.html">Projects</a>
-                <a id="blog" class="headerprops" href="./blog.html">Blog</a>
-                <a id="resume" class="headerprops" href="resume.html">Resume</a>
+                <a id="home" class="headerprops ml25" href="./index.html" onmouseover="changenavcolor('home');" onmouseleave="orignavcolor('home')">Home</a>
+                <a id="projects" class="headerprops" href="./projects.html" onmouseover="changenavcolor('projects')" onmouseleave="orignavcolor('projects')">Projects</a>
+                <a id="blog" class="headerprops" href="./blog.html" onmouseover="changenavcolor('blog')" onmouseleave="orignavcolor('blog')">Blog</a>
+                <a id="resume" class="headerprops" href="resume.html" onmouseover="changenavcolor('resume')" onmouseleave="orignavcolor('resume')">Resume</a>
             </nav>
         </div>
 
@@ -49,10 +49,10 @@
 
         <div id="infobackground">
             <h4 id="designtext">Made by Jon Mateer :&#41</h4>
-            <h4 id="versiontext">V1.1</h4>
+            <h4 id="versiontext">V1.2</h4>
         </div>
         
 
-        <script src="" async defer></script>
+        <script src="proj3.js" async defer></script>
     </body>
 </html>
