--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Micro 5' rel='stylesheet'>
         <title>Jon's Portfolio</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,25 +20,31 @@
                 <a id="projects" class="headerprops" href="./projects.html" onmouseover="changenavcolor('projects')" onmouseleave="orignavcolor('projects')">Projects</a>
                 <a id="blog" class="headerprops" href="./blog.html" onmouseover="changenavcolor('blog')" onmouseleave="orignavcolor('blog')">Blog</a>
                 <a id="resume" class="headerprops" href="resume.html" onmouseover="changenavcolor('resume')" onmouseleave="orignavcolor('resume')">Resume</a>
+                <img id="github" src="github-mark.png"/>
             </nav>
         </div>
         <h1 id="whoami" class="cmiddle">Jon@Mateer:~$ whoami</h1>
 
 
         <!--A brief paragraph of some things about me-->
-        <p id="intro">Hello my name is Jonathan Mateer(I go by Jon), I'm originally from Carroll Country Maryland.  I'm a Computer Science major here at Liberty University with cognates in software development and general CS.  I'm currently a Junior with an expected graduation year of 2026.  I have a lot of interests but I'll try and contain my excitement and just list a couple of them.  Some of my interests include: building computers for fun, learning further game and web development, japanese, rock climbing, and every once in a while a bit of sound design playing with synthesizers in Ableton.  
+        <p id="intro">Hello my name is Jonathan Mateer(I go by Jon), I'm originally from Carroll Country Maryland.  I'm a Computer Science major here at Liberty University with cognates in software development and general CS.  I'm currently a Junior with an expected graduation year of 2026.  I have a lot of interests but I'll try and contain my excitement and just list a couple of them.  Some of my interests include: building computers for fun, further learning about game and web development, japanese, rock climbing, and every once in a while a bit of sound design playing with synthesizers in Ableton.  
         </p>
-
+        <!--I run a script here to demonstrate making an element with createElement and appendChild-->
+        <script>
+            const head = document.createElement("h1");
+            head.innerHTML = "This header was made with createElement and appendChild"
+            head.style.color = "#98fbcb";
+            head.style.fontFamily = 'Inter';
+            head.style.marginLeft = "15%"
+            document.body.appendChild(head)
+        </script>
         <br>
-        <button id="messagebutton" class="cmiddle" type="button" onclick="assigngrades(); getweather();" onmouseover="changebuttoncolor('messagebutton');" onmouseleave="origbuttoncolor('messagebutton');">Calculate Grades</button>
         <br>
         <br>
-
-        <h1 id="secretmessage" class="cmiddle"></h1>
 
         <!--These are just some images of PCs I've built-->
-        <img id="firstimg" src="./merockwall.jpg"/>
-        <img src="./meglasses.jpg"/>
+        <img id="firstimg" src="./merockwall.jpg" onclick="imageoverlay('./merockwall.jpg')"/>
+        <img src="./meglasses.jpg" onclick="imageoverlay('./meglasses.jpg')">
         <br>
         <br>
         <br>
@@ -45,11 +52,11 @@
         
 
         <div id="infobackground">
-            <h4 id="designtext">Made by Jon Mateer :&#41;</h4>
-            <h4 id="versiontext">V1.2</h4>
+            <h4 id="designtext" onmouseover="facewink('designtext')">Made by Jon Mateer :&#41;</h4>
+            <h4 id="versiontext">V1.3</h4>
         </div>
         
 
-        <script src="proj3.js" async defer></script>
+        <script src="proj5.js" async defer></script>
     </body>
 </html>
