--- a/projects.html
+++ b/projects.html
@@ -15,11 +15,13 @@
         <!--Here is my navigational section with links contained in a nav tag-->
         <div id="navbackground">
             <nav>
-                <a id="home" class="headerprops ml25" href="./index.html" onmouseover="changenavcolor('home');" onmouseleave="orignavcolor('home')">Home</a>
-                <a id="projects" class="headerprops" href="./projects.html" onmouseover="changenavcolor('projects')" onmouseleave="orignavcolor('projects')">Projects</a>
-                <a id="blog" class="headerprops" href="./blog.html" onmouseover="changenavcolor('blog')" onmouseleave="orignavcolor('blog')">Blog</a>
-                <a id="resume" class="headerprops" href="resume.html" onmouseover="changenavcolor('resume')" onmouseleave="orignavcolor('resume')">Resume</a>
-                <img id="github" src="github-mark.png"/>
+                <a id="home" class="headerprops ml25" href="./index.html" onmouseover="changenavcolor('home');" onmouseleave="orignavcolor('home')">HOME</a>
+                <a id="projects" class="headerprops" href="./projects.html" onmouseover="changenavcolor('projects')" onmouseleave="orignavcolor('projects')">PROJECTS</a>
+                <a id="blog" class="headerprops" href="./blog.html" onmouseover="changenavcolor('blog')" onmouseleave="orignavcolor('blog')">BLOG</a>
+                <a id="resume" class="headerprops" href="resume.html" onmouseover="changenavcolor('resume')" onmouseleave="orignavcolor('resume')">RESUME</a>
+                <a href="https://github.com/jmateer12">
+                    <img id="github" src="github-mark.png"/>
+                </a>
             </nav>
         </div>
 
@@ -79,9 +81,9 @@
 
         <div id="infobackground">
             <h4 id="designtext" onmouseover="facewink('designtext')">Made by Jon Mateer :&#41</h4>
-            <h4 id="versiontext">V1.3</h4>
+            <h4 id="versiontext">v1.3</h4>
         </div>
         
-        <script src="proj5.js" async defer></script>
+        <script src="proj6.js" async defer></script>
     </body>
 </html>
