--- a/index.html
+++ b/index.html
@@ -31,46 +31,31 @@
         <!--A brief paragraph of some things about me-->
         <p id="intro">Hello my name is Jonathan Mateer(I go by Jon), I'm originally from Carroll Country Maryland.  I'm a Computer Science major here at Liberty University with cognates in software development and general CS.  I'm currently a Junior with an expected graduation year of 2026.  I have a lot of interests but I'll try and contain my excitement and just list a couple of them.  Some of my interests include: building computers for fun, further learning about game and web development, japanese, rock climbing, reading, sound design playing with synthesizers in Ableton.  
         </p>
-        <!--I run a script here to demonstrate making an element with createElement and appendChild-->
-        <script>
-            const head = document.createElement("h1");
-            head.innerHTML = "This header was made with createElement and appendChild"
-            head.style.color = "#98fbcb";
-            head.style.fontFamily = 'Inter';
-            head.style.marginLeft = "15%"
-            document.body.appendChild(head)
-        </script>
-        <form id="userform" name="userform">
-            <label for="fullname">Full Name:</label><br>
-            <input type="text" id="fullname" name="fullname" required><br>
-            <label for="username">Username:</label><br>
-            <input type="text" id="username" name="username" required><br>
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" name="email" required><br>
-            <label for="password">Password:</label><br>
-            <input type="password" id="password" name="password" required><br>
-            <label for="confirpassword">Confirm Password:</label><br>
-            <input type="password" id="confirpassword" name="confirpassword" required><br>
-            <label for="phonenum">Phone Number:</label><br>
-            <input type="text" id="phonenum" name="phonenum" required><br>
-            <label for="dob">Date of Birth:</label><br>
-            <input type="date" id="dob" name="dob"><br>
-            <label for="terms">Agree to terms:</label><br>
-            <input type="checkbox" id="terms" name="terms"><br>
-            <label for="hobbies">Please choose your hobbies:</label><br>
-            <input type="checkbox" id="reading" name="hobbies" value="reading">
-            <label for="reading">reading</label><br>
-            <input type="checkbox" id="climbing" name="hobbies" value="climbing">
-            <label for="climbing">climbing</label><br>
-            <input type="checkbox" id="watchmovies" name="hobbies" value="watching movies">
-            <label for="watchmovies">watching movies</label><br>
-           
-            <label for="fileupload">Please select a file to display(.txt):</label><br>
-            <input type="file" accept=".txt" id="fileupload" name="fileupload"><br>
-            <input type="submit" onclick="event.preventDefault(); validateform(); printhobbys(); printfile();">
+
+        <!--Form to use to modify the task feature-->
+        <form id="taskform">
+            <label for="name">Task Name:</label><br>
+            <input type="text" id="name" name="name" required><br>
+            <label for="description">Description:</label><br>
+            <input type="text" id="description" name="description" required><br>
+            <label for="isdone">Is Done:</label><br>
+            <input type="checkbox" id="isdone" name="isdone" required><br>
+            <label for="priority">Priority:</label><br>
+            <input type="radio" id="highprior" name="priority" value="High" required>
+            <label for="highprior">High</label><br>
+            <input type="radio" id="medprior" name="priority" value="Medium" required>
+            <label for="medprior">Medium</label><br>
+            <input type="radio" id="lowprior" name="priority" value="Low" required>
+            <label for="lowprior">Low</label>
         </form>
-        <p id="hobbytext"></p><br>
-        <p id="filetext"></p>
+        <!--Buttons that interact with the task feature-->
+        <button id="viewtasks" class="taskbuttons" type="button">View Tasks</button>
+        <button id="addtask" class="taskbuttons" type="button">Add Task</button>
+        <button id="removetask" class="taskbuttons" type="button">Remove Task</button>
+        <button id="updatetask" class="taskbuttons" type="button">Update Task</button>
+        <button id="completetask" class="taskbuttons" type="button">Mark task complete</button>
+        <!--Header where the task text appears-->
+        <h3 id="currtasks"></h3>
         <br>
         <br>
         <br>
@@ -91,5 +76,6 @@
         
 
         <script src="proj7.js" async defer></script>
+        <script src="objects.js" async defer></script>
     </body>
 </html>
