--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
             <input type="color" id="textcolor" name="textcolor" required><br>
             <label for="fontsize">Font Size:</label><br>
             <input type="number" id="fontsize" name="fontsize" required><br>
-            <input type="submit" value="submit">
+            <input type="submit">
         </form>
+        <p id="example">Example Text</p>
         <br>
         <br>
         <br>
@@ -62,6 +63,5 @@
         
 
         <script src="proj9.js" async defer></script>
-        <script src="objects.js" async defer></script>
     </body>
 </html>
